[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/Sprites/sprite fundo UI.png" type="Texture" id=1]
[ext_resource path="res://Cenas/Interface_usuario.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/Personagem Menu/Personagem (3).png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Personagem Menu/Personagem (4).png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Personagem Menu/Personagem (2).png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Personagem Menu/Personagem (1).png" type="Texture" id=6]
[ext_resource path="res://Assets/Fonts/Kurland_Font_0_30/Kurland.otf" type="DynamicFontData" id=7]
[ext_resource path="res://Cenas/Speed.gd" type="Script" id=8]
[ext_resource path="res://Cenas/Force.gd" type="Script" id=9]
[ext_resource path="res://Cenas/Points.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=8]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=10]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=11]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=12]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=14]
size = 60
font_data = ExtResource( 7 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Personagem",
"speed": 5.0
} ]

[node name="InterfaceUsuario" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 305.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -3.0
margin_right = 2424.0
margin_bottom = 1172.0
color = Color( 0, 0, 0, 1 )

[node name="Hud" type="Sprite" parent="."]
position = Vector2( 325, 358 )
scale = Vector2( 0.768854, 0.787741 )
texture = ExtResource( 1 )

[node name="GameName" type="Label" parent="Hud"]
margin_left = -180.769
margin_top = -272.059
margin_right = 180.231
margin_bottom = -203.059
custom_colors/font_color = Color( 0.603922, 0.203922, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Nome do jogo"

[node name="Quit" type="Button" parent="Hud"]
margin_left = 67.3077
margin_top = 220.588
margin_right = 327.308
margin_bottom = 323.588
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.847059, 0.0745098, 0.0745098, 1 )
custom_fonts/font = SubResource( 3 )
text = "Quit"
flat = true

[node name="Controls" type="Button" parent="Hud"]
margin_left = -128.846
margin_top = 64.3382
margin_right = 107.154
margin_bottom = 134.338
custom_colors/font_color = Color( 0.054902, 0.00784314, 0.596078, 1 )
custom_fonts/font = SubResource( 4 )
text = "Controls"
flat = true

[node name="Resume" type="Button" parent="Hud"]
margin_left = -107.692
margin_top = -108.456
margin_right = 95.3077
margin_bottom = -38.4559
custom_colors/font_color = Color( 0.180392, 0.760784, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Resume"
flat = true

[node name="Hud2" type="Sprite" parent="."]
position = Vector2( 963, 360 )
scale = Vector2( 0.773542, 0.79237 )
texture = ExtResource( 1 )

[node name="Menu" type="Label" parent="Hud2"]
margin_left = -219.231
margin_top = -325.368
margin_right = 217.769
margin_bottom = -261.368
custom_fonts/font = SubResource( 6 )
text = "Menu de upgrade"

[node name="ButtonFMinus" type="Button" parent="Hud2"]
margin_left = 94.0
margin_top = 182.0
margin_right = 184.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 7 )
text = "-"

[node name="ButtonFPlus" type="Button" parent="Hud2"]
margin_left = 213.0
margin_top = 182.0
margin_right = 304.0
margin_bottom = 252.0
custom_fonts/font = SubResource( 9 )
text = "+"

[node name="ButtonSMinus" type="Button" parent="Hud2"]
margin_left = 94.0
margin_top = 261.0
margin_right = 186.0
margin_bottom = 324.0
custom_fonts/font = SubResource( 8 )
text = "-"

[node name="ButtonSPlus" type="Button" parent="Hud2"]
margin_left = 213.462
margin_top = 261.029
margin_right = 305.462
margin_bottom = 324.029
custom_fonts/font = SubResource( 10 )
text = "+"

[node name="Force" type="Label" parent="Hud2"]
margin_left = -304.0
margin_top = 178.0
margin_right = 48.0
margin_bottom = 242.0
custom_fonts/font = SubResource( 11 )
text = "Force:"
script = ExtResource( 9 )

[node name="Speed" type="Label" parent="Hud2"]
margin_left = -306.0
margin_top = 256.0
margin_right = 35.0
margin_bottom = 317.0
custom_fonts/font = SubResource( 12 )
text = "Speed"
script = ExtResource( 8 )

[node name="points" type="Label" parent="Hud2"]
margin_left = -198.0
margin_top = 90.0
margin_right = 140.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 14 )
text = "Points"
script = ExtResource( 10 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 944, 275 )
scale = Vector2( 0.927901, 0.67027 )
frames = SubResource( 13 )
animation = "Personagem"
frame = 3
speed_scale = 0.5

[connection signal="pressed" from="Hud/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Hud/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="Hud/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Hud2/ButtonFMinus" to="." method="_on_ButtonFMinus_pressed"]
[connection signal="pressed" from="Hud2/ButtonFPlus" to="." method="_on_ButtonFPlus_pressed"]
[connection signal="pressed" from="Hud2/ButtonSMinus" to="." method="_on_ButtonSMinus_pressed"]
[connection signal="pressed" from="Hud2/ButtonSPlus" to="." method="_on_ButtonSPlus_pressed"]
